done with the html

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -45,7 +45,53 @@
         <textarea class="col-8 col-md-10 time-block description form-control"></textarea>
         <button class="col-2 col-md-1 saveBtn"><i class="far fa-save fa-lg"></i></button>
     </div>
+    <!--11 am timeblock-->
+    <div id="09" class="row time-div p-0">
+      <!-- leftside hour marker -->
+      <div class="col-2 col-md-1 hour d-flex align-items-center">11 am</div>
+      <!-- text area for tasks -->
+      <textarea class="col-8 col-md-10 time-block description form-control"></textarea>
+      <!-- save button and icon -->
+      <button class="col-2 col-md-1 saveBtn"><i class="far fa-save fa-lg"></i></button>
+  </div>
+    <!--12 pm timeblock-->
+    <div id="12" class="row time-div p-0">
+      <div class="col-2 col-md-1 hour d-flex align-items-center">12 pm</div>
+      <textarea class="col-8 col-md-10 time-block description form-control"></textarea>
+      <button class="col-2 col-md-1 saveBtn"><i class="far fa-save fa-lg"></i></button>
     </div>
+    <!--1 pm timeblock-->
+    <div id="1" class="row time-div p-0">
+      <div class="col-2 col-md-1 hour d-flex align-items-center">1 pm</div>
+      <textarea class="col-8 col-md-10 time-block description form-control"></textarea>
+      <button class="col-2 col-md-1 saveBtn"><i class="far fa-save fa-lg"></i></button>
+    </div>
+    <!--2 pm timeblock-->
+    <div id="2" class="row time-div p-0">
+      <div class="col-2 col-md-1 hour d-flex align-items-center">2 pm</div>
+      <textarea class="col-8 col-md-10 time-block description form-control"></textarea>
+      <button class="col-2 col-md-1 saveBtn"><i class="far fa-save fa-lg"></i></button>
+    </div>
+    <!--3 pm timeblock-->
+    <div id="3" class="row time-div p-0">
+      <div class="col-2 col-md-1 hour d-flex align-items-center">3 pm</div>
+      <textarea class="col-8 col-md-10 time-block description form-control"></textarea>
+      <button class="col-2 col-md-1 saveBtn"><i class="far fa-save fa-lg"></i></button>
+    </div>
+    <!--4 pm timeblock-->
+    <div id="4" class="row time-div p-0">
+      <div class="col-2 col-md-1 hour d-flex align-items-center">4 pm</div>
+      <textarea class="col-8 col-md-10 time-block description form-control"></textarea>
+      <button class="col-2 col-md-1 saveBtn"><i class="far fa-save fa-lg"></i></button>
+    </div>
+    <!--5 pm timeblock-->
+    <div id="5" class="row time-div p-0">
+      <div class="col-2 col-md-1 hour d-flex align-items-center">5 pm</div>
+      <textarea class="col-8 col-md-10 time-block description form-control"></textarea>
+      <button class="col-2 col-md-1 saveBtn"><i class="far fa-save fa-lg"></i></button>
+    </div>
+    </div>
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
